			wxFormBuilder ChangeLog
********************************************************************************
08/27/2009 Version 3.01.65 (Beta)
* Fixed menu items' shortcuts in XRC
* Implemented context menus for forms, containers and widgets. An instance
  of wxMenu class can be now assigned directly to these objects. The context menu
  is displayed on a right-mouse-button click by default, but the behaviour can be
  changed by "context_menu" widget's option. Note that this feature is supported
  in C++ and Python code generation only.
* FS#280 - wxMenu not part of a wxMenuBar 
* Fixed startup crash on MacOS X 10.5.7 (for wxWidgets 2.8.10)
* Fixed loading of wxTreeListCtrl events that were inherited from wxTreeCtrl in 
  wxAdditions.
* FS#444 - python code generation error
* FS#428 - extra import(s) in wxpython code generation
* FS#446 - Can't add Submenu to a Menu

08/27/2009 Version 3.01.64 (Beta)
* FS#389 - Center option for dialogs should be set to wxBOTH by default
* FS#391 - Change (some) user notifications from status bar to message box 

08/26/2009 Version 3.01.63 (Beta)
* Fixed code generation of wxGrid events in Python

08/19/2009 Version 3.01.62 (Beta)
+ Added support for wxSearchCtrl widget
+ Added support for wxAnimationCtrl widget
* Fixed code generation of system colors in Python
* FS#430 - Spacer code generation in Python is incomplete (no proportion param)
* FS#432 - Fatal error when resizing Object Properties
* Fixed tooltips' code generation in Python
* Sash position of wxSplitterWindow is set only if differs from -1

06/11/2009 Version 3.01.61 (Beta)
+ Added support for Python (wxPython) code generation
* FS#424 - No encoding declared
* FS#425 - ListBook: C++ code instead of Python code 

03/06/2009 Version 3.01.60 (Beta)
* Moved the 'event_handler' type to the Forms plug-in. This allows different 
  event handling methods to be used per Frame/Dialog/Panel. This makes it even
  easier to create Dialogs that don't need any inherited class to work.