@@ -51,11 +51,14 @@ Python code generation writen by
 			@{ wx.Frame @}
 		</template>
 		<template name="cons_def">
+			def __init__( self, parent ):
+		</template>
+		<template name="cons_call">
 			#ifnotnull $subclass/name
-			@{ $subclass/name.__init__ @}
+			@{ $subclass/name.__init__( self )@}
 
 			#ifnull $subclass/name
-			@{ wx.Frame.__init__ @}
+			@{ wx.Frame.__init__@}
 			( self, parent, id = $id, title = $title, pos = $pos, size = $size, style = $style #ifnotnull $window_style @{ |$window_style @} #ifnotnull $window_name @{, name = $window_name @} )
 		</template>
 		<template name="include">import wx</template>
@@ -163,11 +166,14 @@ Python code generation writen by
 			@{ wx.Panel @}
 		</template>
 		<template name="cons_def">
+			def __init__( self, parent ):
+		</template>
+		<template name="cons_call">
 			#ifnotnull $subclass/name
-			@{ $subclass/name.__init__ @}
+			@{ $subclass/name.__init__( self )@}
 
 			#ifnull $subclass/name
-			@{ wx.Panel.__init__ @}
+			@{ wx.Panel.__init__@}
 			( self, parent, id = $id, pos = $pos, size = $size, style = $window_style #ifnotnull $window_name @{, name = $window_name @} )
 		</template>
 		<template name="include">import wx</template>
@@ -275,11 +281,14 @@ Python code generation writen by
 			@{ wx.Dialog @}
 		</template>
 		<template name="cons_def">
+			def __init__( self, parent ):
+		</template>
+		<template name="cons_call">
 			#ifnotnull $subclass/name
-			@{ $subclass/name.__init__ @}
+			@{ $subclass/name.__init__( self )@}
 
 			#ifnull $subclass/name
-			@{ wx.Dialog.__init__ @}
+			@{ wx.Dialog.__init__@}
 			( self, parent, id = $id, title = $title, pos = $pos, size = $size, style = $style #ifnotnull $window_style @{ |$window_style @} #ifnotnull $window_name @{, name = $window_name @} )
 		</template>
 		<template name="include">import wx</template>
@@ -377,6 +386,69 @@ Python code generation writen by
 		<template name="evt_disconnect_OnSize">self.Unbind( wx.EVT_SIZE )</template>
 		<template name="evt_connect_OnUpdateUI">self.Bind( wx.EVT_UPDATE_UI, #handler )</template>
 		<template name="evt_disconnect_OnUpdateUI">self.Unbind( wx.EVT_UPDATE_UI )</template>
+	</templates>
+
+	<templates class="MenuBar">
+		<template name="base">
+			#ifnotnull $subclass/name
+			@{ public $subclass/name @}
+
+			#ifnull $subclass/name
+			@{ wx.MenuBar @}
+		</template>
+		<template name="cons_def">
+			def __init__( self ):
+		</template>
+		<template name="cons_call">
+			#ifnotnull $subclass/name
+			@{ $subclass/name.__init__( self )@}
+
+			#ifnull $subclass/name
+			@{ wx.MenuBar.__init__@}
+			( self, style = $window_style )
+		</template>
+		<template name="include">import wx</template>
+	</templates>
+
+	<templates class="ToolBar">
+		<template name="base">
+			#ifnotnull $subclass/name
+			@{ public $subclass/name @}
+
+			#ifnull $subclass/name
+			@{ wx.ToolBar @}
+		</template>
+		<template name="cons_def">
+			def __init__( self, parent ):
+		</template>
+		<template name="cons_call">
+			#ifnotnull $subclass/name
+			@{ $subclass/name.__init__( self )@}
+
+			#ifnull $subclass/name
+			@{ wx.ToolBar.__init__@}
+			( self, parent, id = $id, pos = $pos, size = $size, style = $style #ifnotnull $window_style @{ |$window_style @} #ifnotnull $window_name @{, name = $window_name @} )
+		</template>
+		<template name="include">import wx</template>
+		<template name="settings">
+			#ifnotnull $bitmapsize @{self.SetToolBitmapSize( $bitmapsize ) #nl @}
+
+			#ifnotnull $separation
+			@{
+				#ifnotequal $separation "5"
+				@{ self.SetToolSeparation( $separation ) #nl @}
+			@}
+
+			#ifnotnull $margins 
+			@{ self.SetMargins( $margins ) #nl @}
+
+			#ifnotnull $packing
+			@{
+				#ifnotequal $packing "1"
+				@{ self.SetToolPacking( $packing ) #nl @}
+			@}
+    		</template>
+    		<template name="after_addchild">#nl self.Realize()</template>
 	</templates>
 
 </codegen>
