@@ -718,7 +718,9 @@ void MainFrame::OnObjectSelected( wxFBObjectEvent& event )
 
 					// If selected object is not a Frame or a Panel or a dialog, we won't
 					// adjust the sash position
-					if ( obj->GetObjectTypeName() == wxT("form") )
+					if ( obj->GetObjectTypeName() == wxT("form") ||
+						 obj->GetObjectTypeName() == wxT("menubar_form") ||
+					     obj->GetObjectTypeName() == wxT("toolbar_form") )
 					{
 						sash_pos = m_rightSplitter->GetSashPosition();
 						panel_size = m_visualEdit->GetVirtualSize();
